--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="region_spinner_instructions">Pick WoW region.</string>
     <string name="server_list_instructions">Pick server.</string>
     <string name="buttonSearchText">Find</string>
+    <string name="wallpaper_description">WoW Wallpaper</string>
 </resources>
